Checkpoint. no funciona entregables

--- a/AppE03/templates/AppE03/inicio.html
+++ b/AppE03/templates/AppE03/inicio.html
@@ -3,10 +3,10 @@
 {% block contenidoQueCambia %}
 
    <!--Aqui se va a colocar lo que se cambia y esta asociado a la vista-->
-   <h1>Este es el titulo del inicio que cambio</h1>
-   <p> Se ha heredado todo desde la plantilla padre</p>
+   <h1>Inicio</h1>
+   <p> Pre-Entrega-Gianfranco Valente Cano</p>
 
-   <h3>En el hijo, inicio.html, no tenemos casi nada </h3>
+   <h3> </h3>
    
    {% endblock %}
     
