Checkponit. todo funciona, ahora modificar para la creacion de busqueda

--- a/AppE03/templates/AppE03/inicio.html
+++ b/AppE03/templates/AppE03/inicio.html
@@ -4,7 +4,7 @@
 
    <!--Aqui se va a colocar lo que se cambia y esta asociado a la vista-->
    <h1>Inicio</h1>
-   <p> Pre-Entrega-Gianfranco Valente Cano</p>
+   <p> Busqueda </p>
 
    <h3> </h3>
    
