--- a/AppE03/templates/AppE03/padre.html
+++ b/AppE03/templates/AppE03/padre.html
@@ -25,6 +25,7 @@
                 <a class="navbar-brand" href="{% url 'Cursos' %}">Cursos</a>
                 <a class="navbar-brand" href="{% url 'Estudiantes' %}">Estudiantes</a>
                 <a class="navbar-brand" href="{% url 'Entregables' %}">Entregables</a>
+                <a class="navbar-brand" href="{% url 'BusquedaComision' %}">Busqueda Comision</a>
                 <!--<a class="btn btn-primary" href="#signup">Sign Up</a>-->
             </div>
         </nav>
